[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://sprites/whiteOne.png" type="Texture" id=2]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="whiteDie1" type="Sprite" parent="Control"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( 50, 25 )

[node name="whiteDie2" type="Sprite" parent="Control"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( 100, 25 )

[node name="redDie" type="Sprite" parent="Control"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( 150, 25 )

[node name="yellowDie" type="Sprite" parent="Control"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( 200, 25 )

[node name="greenDie" type="Sprite" parent="Control"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( 250, 25 )

[node name="blueDie" type="Sprite" parent="Control"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( 300, 25 )

[node name="rollButton" type="Button" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
text = "Roll!"

[connection signal="button_up" from="Control/rollButton" to="." method="_on_rollButton_button_up"]
